# OpcUaCANopen

./: .cproject  .gitignore  .gitmodules  .project  CMakeEpilogue.cmake  ProjectSettings.cmake  README.txt
AddressSpace/templates/: designToClassBody.jinja  designToClassHeader.jinja  designToSourceVariablesBody.jinja
CANopen/: CMakeLists.txt
CANopen/include/: CobidCoordinator.hpp  CobidMessageRouter.hpp  Definitions.hpp  EmergencyErrors.hpp  FrameFactory.hpp  NodeGuarding.hpp  NodeStateEngine.hpp  Sdo.h
CANopen/src/: CobidCoordinator.cpp  EmergencyErrors.cpp  FrameFactory.cpp  NodeGuarding.cpp  NodeStateEngine.cpp  Sdo.cpp
CalculatedVariables/src/: CalculatedVariable.cpp
Common/: CMakeLists.txt
Common/include/: Logging.hpp  PiotrsUtils.h
Common/src/: Logging.cpp  PiotrsUtils.cpp
Configuration/: config_upgrade_tool.py
Design/: Design.xml  quasarVersion.txt
Device/: CMakeLists.txt  DeviceCustom.cmake
Device/include/: DBus.h  DEmergencyParser.h  DExtractedValue.h  DGlobalSettings.h  DMultiplexedChannel.h  DNode.h  DOnlineConfigValidator.h  DRpdo.h  DRpdoCachedVariable.h  DSdo.h  DSdoItem.h  DSdoSameIndexGroup.h  DSdoValidator.h  DSdoVariable.h  DStateSwitcher.h  DTpdo.h  DTpdoMultiplex.h  DWarnings.h  (+3 more)
Enumerator/: CMakeLists.txt  generate.py
Enumerator/templates/: designToEnumeratorBody.jinja  designToEnumeratorHeader.jinja
FrameworkInternals/: designTools.py  files.txt
Server/: CMakeLists.txt
Warnings/: CMakeLists.txt  generate.py
Warnings/include/: Warnings.hxx
Warnings/templates/: designToWarnings.jinja
libfort/: CMakeLists.txt
(+46 files in other folders)
